fix: change color contrast success

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,7 @@
 
 	--ion-color-success: #7cda95;
 	--ion-color-success-rgb: 124,218,149;
-	--ion-color-success-contrast: #454a48;
+	--ion-color-success-contrast: #ffffff;
 	--ion-color-success-contrast-rgb: 0,0,0;
 	--ion-color-success-shade: #6dc083;
 	--ion-color-success-tint: #d3efe2;
